# finops-guarddog

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
docs/: architecture.mmd  policies.md  runbooks.md  slack-ux.md  threat-model.md
docs/adr/: 0001-policy-as-code.md  0002-otp-step-up.md  0003-dual-approval-prod.md
policies/examples/: dev_stop_out_of_hours.json
policies/rego/: main.rego
runbooks/aws/ec2_stop/: README.md  action.json  handler.py
runbooks/aws/eip_release/: README.md  action.json  handler.py
slack/: app-manifest.yaml
slack/blocks/: alert_card.json  approval_modal.json
src/guardrails/: README.md  app.py  approval_service.py  audit_log.py  config.py  crypto.py  llm_explainer.py  otp_service.py  policy_engine.py  proposal_store.py  request_auth.py  runbook_executor.py  schema.py  slack_blocks.py  slack_client.py  slack_verify.py  storage.py
src/guardrails/tests/: test_idempotency_inmemory.py  test_otp.py  test_policy_decisions.py  test_request_auth.py  test_schema.py  test_storage_fallback.py
workflows/n8n/: credentials.example.json
workflows/n8n/flows/: 01_ingest_webhook.json  02_normalize_enrich.json  03_policy_decision.json  04_minimal_end_to_end.json  04_slack_notify.json  05_approval_modal_otp.json  06_execute_runbook.json  07_execute_signed_hmac.json
